--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.8.2",
+    "@material-ui/icons": "^4.5.1",
     "formik": "^2.1.1",
     "material-ui": "^0.20.2",
     "react": "^16.10.2",
