--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.8.2",
     "@material-ui/icons": "^4.5.1",
+    "antd": "^3.26.7",
     "formik": "^2.1.1",
     "material-ui": "^0.20.2",
     "react": "^16.10.2",
